# Logos

./: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  AEROSPACE_GRADE_AUDIT_REPORT.md  AEROSPACE_GRADE_COMPLETION_REPORT.md  AEROSPACE_GRADE_UI_IMPLEMENTATION_REPORT.md  BUGFIX.md  BUGFIX_AND_COMPLETION_REPORT.md  CODE_AUDIT_COMPLETION_REPORT.md  COLLABORATION_FRONTEND_ARCHITECTURE.md  COMPLETION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  DUAL_PANE_EDITOR_IMPLEMENTATION_REPORT.md  ENHANCEMENT_RECOMMENDATIONS.md  FILE_CONVERSION_AUDIT_REPORT.md  FINAL_COMPILATION_FIX_REPORT.md  FINAL_PPT_AUDIT_REPORT.md  FINAL_STATUS_REPORT.md  LATEST_CODE_AUDIT_REPORT.md  LICENSE  LINT_FIX_FINAL_REPORT.md  LINT_FIX_PROGRESS.md  LOW_PRIORITY_CODE_AUDIT_REPORT.md  NEW_CODE_AUDIT_REPORT.md  OFFICE_TYPST_GAP_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PPT_MENU_AUDIT_REPORT.md  PPT_MODULE_FEATURE_AUDIT.md  PPT_TEST_REPORT.md  QUICK_FIXES.md  README.md  README.zh-CN.md  REFACTORING_PLAN.md  SPREADSHEET_AEROSPACE_AUDIT_REPORT.md  SPREADSHEET_FINAL_COMPLETION_REPORT.md  SPREADSHEET_MODULE_AUDIT_REPORT.md  SPREADSHEET_SERVICE_AUDIT_REPORT.md  SPREADSHEET_SERVICE_CODE_AUDIT_REPORT.md  SPREADSHEET_SERVICE_FINAL_AUDIT_REPORT.md  (+27 more)
spreadsheet-service/: .env.example  Cargo.toml  README.md
spreadsheet-service/config/: spreadsheet.toml
spreadsheet-service/data/: spreadsheet.db
spreadsheet-service/src/: auth.rs  charts.rs  conditional_formatting.rs  config.rs  csrf.rs  db.rs  error.rs  excel.rs  handlers.rs  main.rs  models.rs  pivot_tables.rs  rate_limit.rs  secrets.rs  services.rs  transaction.rs  validation.rs
spreadsheet-service/tests/: integration_test.rs  unit_auth_test.rs  unit_config_test.rs  unit_error_test.rs  unit_security_test.rs  unit_validation_test.rs
src-tauri/: AUDIT_REPORT.md  Cargo.toml  tarpaulin-report.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: export_limits.toml
src-tauri/coverage/: tarpaulin-report.html
src-tauri/src/: error_handling.rs  lib.rs  menu.rs
src-tauri/src/accessibility_service/: bridge.rs  mod.rs  screen_reader.rs
src-tauri/src/ai_service/: client.rs  client_tests.rs  config.rs  conversation.rs  mod.rs  tests.rs
src-tauri/src/auto_save_service/: mod.rs  service.rs  tests.rs
src-tauri/src/chart_service/: generator.rs  mod.rs
src-tauri/src/cloud_service/: dropbox.rs  google_drive.rs  mod.rs  onedrive.rs  sync_manager.rs
src-tauri/src/collaboration_service/: crdt.rs  mod.rs  websocket.rs
src-tauri/src/comments_service/: manager.rs  mod.rs  storage.rs
src-tauri/src/config_service/: error.rs  export_config.rs  mod.rs
src-tauri/src/diff_service/: diff_engine.rs  mod.rs  viewer.rs
src-tauri/src/docx_service/: config.rs  export.rs  header_footer.rs  image.rs  mod.rs  paragraph.rs  style.rs  table.rs
src-tauri/src/editing_engine_service/: document_ops.rs  file_manager.rs  format_converter.rs  json_to_typst.rs  mod.rs  tests.rs
src-tauri/src/epub_service/: chapter.rs  config.rs  export.rs  metadata.rs  mod.rs  style.rs
src-tauri/src/examples/: accessibility_service.rs  export_service.rs  incremental_compilation.rs  package_management.rs  plugin_system.rs
src-tauri/src/export_service/: formats.rs  generators.rs  mod.rs
src-tauri/src/header_footer_service/: mod.rs  processor.rs  tests.rs
src-tauri/src/macro_service/: engine.rs  mod.rs  recorder.rs
src-tauri/src/mail_merge_service/: data_processor.rs  mod.rs  template_engine.rs
src-tauri/src/markdown_service/: config.rs  converter.rs  mod.rs
src-tauri/src/math_service/: mod.rs  renderer.rs
src-tauri/src/ocr_service/: image_processor.rs  (+2 more)
src-tauri/tarpaulin-report/: tarpaulin-report.html
src-tauri/tests/: preview_editor_integration_tests.rs  template_integration.rs
src-tauri/typist-templates/: README.md  code.typ  document.typ  slide.typ
(+968 files in other folders)
