[package]
name = "spreadsheet-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "macros"] }
rusqlite = "0.32"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Async
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Excel file handling
calamine = "0.25"
umya-spreadsheet = "2.3"

# Formula engine (optional, can use IronCalc later)
# ironcalc = "0.1"

# Environment
dotenv = "0.15"

# Validation
regex = "1.10"
validator = { version = "0.18", features = ["derive"] }

# Configuration
config = "0.14"

# Authentication (JWT)
jsonwebtoken = "9"
bcrypt = "0.15"

# Rate limiting
tower_governor = "0.4"

# CSRF protection
cookie = "0.18"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
hyper = { version = "1", features = ["full"] }
tower = "0.4"
