[package]
name = "logos"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "logos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
bytes = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
md5 = "0.7"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
# Typst dependencies
typst = "0.12"
typst-render = "0.12"
typst-pdf = "0.12"
typst-svg = "0.12"
image = { version = "0.25", features = ["jpeg", "png", "tiff", "bmp", "gif", "webp"] }
base64 = "0.22"
urlencoding = "2.1"
# Data loading dependencies
csv = "1.3"
serde_yaml = "0.9"
toml = "0.8"
serde_cbor = "0.11"
xml = "0.8"
# Math and symbols
unicode-segmentation = "1.11"
# PPTX generation (using git version as crates.io versions are yanked)
ppt-rs = { git = "https://github.com/yingkitw/ppt-rs" }
# Excel import/export
calamine = "0.22"
# umya-spreadsheet = "2.3"  # Temporarily disabled - requires complex API integration
# LaTeX rendering (temporarily disabled - crate not available)
# katex-rs = "0.2.4"
# Optional OCR dependencies (requires tesseract system library)
tesseract-rs = { version = "0.2", optional = true }

[[example]]
name = "incremental_compilation"
path = "src/examples/incremental_compilation.rs"

[[example]]
name = "package_management"
path = "src/examples/package_management.rs"

[[example]]
name = "export_service"
path = "src/examples/export_service.rs"

[[example]]
name = "accessibility_service"
path = "src/examples/accessibility_service.rs"

[[example]]
name = "plugin_system"
path = "src/examples/plugin_system.rs"
